--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project_mispis",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Лабораторная работа по предмету \"Методы и средства проектирования ИС и технологий\"",
   "author": "Serolapy",
   "main": "index.js",
@@ -14,6 +14,7 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "path": "^0.12.7",
